solve sideshift

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -367,8 +367,7 @@ u-max-full-width is changed to lazy for the lazyload js plugin
   width: 100%;
   box-sizing: border-box; }
 .lazy {
-  width: 98%;
-  padding-left: 2%;
+  width: 96%;
   box-sizing: border-box; }
 .u-pull-right {
   float: right; }
